--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,12 @@
 h1 {
   margin: 0;
   line-height: 64px;
+  color: black;
+  cursor: pointer;
+}
+
+h1.scrolled {
+  color: white;
 }
 
 dl, dt, dd {
@@ -46,12 +52,9 @@ i {
 
 header {
   display: flex;
-  /* padding: 0 16px; */
   padding-left: 16px;
   position: fixed;
   top: 0;
-  /* width: 100%; */
-  /* width: 100vw; */
   width: calc(100vw - 16px);
   z-index: 10;
   transition: background-color .3s, box-shadow .3s;
@@ -60,28 +63,11 @@ header {
 header.scrolled {
   background-color: #4c4948;
   box-shadow: 0 0 4px rgba(0, 0, 0, .3);
-  /* color: white; */
 }
-
-/* header h1 {
-  margin: 0;
-  font-size: 22px;
-  line-height: 64px;
-} */
-
-/* header a {
-  text-decoration: none;
-  color: black;
-} */
 
 header a.scrolled {
   color: white;
 }
-
-/* header img {
-  width: 30%;
-  margin-top: 16px;
-} */
 
 .sp-menu {
   margin-left: auto;
@@ -97,10 +83,6 @@ header a.scrolled {
 .sp-menu #open.hide {
   display: none;
 }
-
-/* main {
-  padding: 0 16px;
-} */
 
 .overlay {
   position: fixed;
@@ -123,11 +105,9 @@ header a.scrolled {
   pointer-events: auto;
 }
 
-/* .overlay #close { */
 #close {
   position: absolute;
   top: 16px;
-  /* right: 16px; */
   right: 8px;
   font-size: 32px;
   cursor: pointer;
@@ -185,8 +165,6 @@ header a.scrolled {
 
 .hero img {
   width: 100%;
-  /* height: 400px; */
-  /* object-fit: cover; */
 }
 
 /* main */
@@ -195,21 +173,11 @@ main {
   overflow: hidden;
 }
 
-/* main .container > div {
-  margin-bottom: 80px;
-} */
-
 .desc {
   height: calc(100vh - 128px);
   display: flex;
   align-items: center;
 }
-
-/* .container img:nth-of-type(3), */
-/* .container img:nth-of-type(4) */
-/* .container p {
-  text-align: center;
-}   */
 
 .desc_top {
   height: 64px;
@@ -253,10 +221,6 @@ main {
 
 /* Online Shop */
 
-/* #onlineshop {
-  height: 700px;
-} */
-
 #onlineshop img {
   width: 40%;
   position: absolute;
@@ -270,7 +234,6 @@ main {
 }
 
 #onlineshop .onlineshop-info {
-  /* transform: translateX(calc(100vh / 2)); */
   width: 50%;
 }
 
@@ -295,31 +258,20 @@ main {
   width: 50%;
 }
 
-/* #access p {
-  text-align: center;
-} */
-
 /* Contact */
 
 #contact .desc {
   flex-direction: row-reverse;
 }
 
-/* #contact .contact-info {
-  height: calc(100vh - 68.84px);
-  display: flex;
-  align-items: center;
-} */
-
-/* #contact img { */
 .desc img {
   width: 50%;
-  /* margin: 16px; */
 }    
 
 .access-info-data,
 .contact-info-data {
   padding-left: 16px;
+  width: 50vw;
 }
 
 .contact-info-data .mail {
@@ -336,7 +288,6 @@ footer {
 
 footer .container {
   display: flex;
-  /* justify-content: space-between; */
   align-items: center;
 }
 
@@ -356,10 +307,6 @@ footer .container {
   box-sizing: border-box;
 }
 
-/* .footer-info-list {
-  display: flex;
-} */
-
 footer dt {
   clear: left;
   float: left;
@@ -367,18 +314,11 @@ footer dt {
 }
 
 footer dd {
-  /* clear: left;
-  float: left; */
   margin-bottom: 10px;
   line-height: 24px;
 }
 
-/* footer .footer { */
 .copyright {
-  /* display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 8px; */
   text-align: center;
 }
 
@@ -403,24 +343,6 @@ footer small {
   font-size: 16px;
 }
 
-/* #pagetop {
-  position: fixed;
-  bottom: 16px;
-  right: 16px;
-  font-size: 48px;
-  cursor: pointer;
-  background: #4c4948;
-  color: white;
-  border-radius: 50%;
-  line-height: 0;
-  opacity: 0;
-  transition: opacity .3s;
-}
-
-#pagetop.appear {
-  opacity: .8;
-} */
-
 #to_top {
   position: fixed;
   bottom: 16px;
@@ -442,66 +364,45 @@ footer small {
   border-radius: 50%;
 }
 
-/* @media (min-width: 600px) { */
-/* @media (min-width: 641px) { */
-  .pc-menu {
-    display: block;
-    margin-left: auto;
-  }  
-/* } */
+.pc-menu {
+  display: block;
+  margin-left: auto;
+}  
 
+.container,
+.footer {
+  margin: 0 auto;
+  max-width: 1200px;
+}
 
-/* large screen */
+.pc-menu ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
 
-/* @media (min-width: 800px) { */
-/* @media (min-width: 821px) { */
-  .container,
-  .footer {
-    /* width: calc(100% - 32px); */
-    margin: 0 auto;
-    /* max-width: 800px; */
-    max-width: 1200px;
-  }
+.pc-menu a {
+  display: block;
+  width: 120px;
+  line-height: 64px;
+  text-align: center;
+}
+
+.pc-menu a.scrolled {
+  color: white;
+}
+
+.pc-menu a:hover {
+  background: #f2f2f2;
+}
+
+#aboutus {
+  margin-bottom: 64px;
+}
   
-  .pc-menu ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-  }
-
-  .pc-menu a {
-    display: block;
-    /* width: 120px; */
-    width: 144px;
-    line-height: 64px;
-    text-align: center;
-  }
-
-  .pc-menu a.scrolled {
-    color: white;
-  }
-
-  .pc-menu a:hover {
-    background: #f2f2f2;
-  }
-
-  /* .sp-menu {
-    display: none;
-  } */
-
-  #aboutus {
-    margin-bottom: 64px;
-  }
-  
-  /* .map_small {
-    display: none;
-  } */
-/* } */
-
 /* small screen */
 
-/* @media (max-width: 640px) { */
 @media (max-width: 767px) {
   .pc-menu {
     display: none;
@@ -514,8 +415,6 @@ footer small {
   .hero img {
     object-fit: cover;
     object-position: 2% ;
-    /* object-position: 50% ; */
-    /* object-position: 95% ; */
     height: 390px;
   }
 
@@ -566,7 +465,13 @@ footer small {
   }
 
   #access > .desc {
-    height: 444px;
+    height: 1067.66px;
+  }
+
+  .access-info-data,
+  .contact-info-data {
+    width: 100vw;
+    padding: 0;
   }
 
   .map_large {
@@ -597,6 +502,7 @@ footer small {
 
   footer dd {
     clear: left;
+    color: white;
   }
 
   footer ul.sns {
@@ -607,8 +513,7 @@ footer small {
 
 /* medium screen */
 
-/* @media (mix-width: 641px) and (max-width: 820px) { */
-@media (min-width: 641px) and (max-width: 820px) {
+@media (min-width: 641px) and (max-width: 912px) {
   .pc-menu {
     display: none;
   }
@@ -637,6 +542,10 @@ footer small {
     height: 600px;
   }
 
+  #access img {
+    width: 90%;
+  }
+  
   .map_small {
     display: none;
   }
@@ -651,7 +560,7 @@ footer small {
   }
 }
 
-@media (min-width: 821px) {
+@media (min-width: 913px) {
   .sp-menu {
     display: none;
   }
